--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -12,9 +12,12 @@
     "@babel/core": "^7.16.10",
     "@babel/preset-env": "^7.16.10",
     "@babel/preset-react": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.11.0",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   }
 }
