--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack server",
+    "build": "cross-env NODE_ENV=production webpack"
+  },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,6 +18,7 @@
     "@babel/preset-react": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "react-refresh": "^0.11.0",
     "webpack": "^5.67.0",
