--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -19,8 +19,10 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "react-refresh": "^0.11.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
